K3S/0ld/UptimeKuma/uptime-kuma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll
    keel.sh/approvals: "1"
spec:
  selector:
    matchLabels:
      app: uptime-kuma
  replicas: 1
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      volumes:
      - name: uptime-kuma-vol
        persistentVolumeClaim:
          claimName: uptime-kuma-pvc
      containers:
      - name: uptime-kuma
        image: louislam/uptime-kuma:1
        ports:
        - containerPort: 3001
        resources:
          requests:
            cpu: '100m'
            memory: '128M'
          limits:
            cpu: '1'
            memory: 1024M
        volumeMounts:
        - name: uptime-kuma-vol
          mountPath: /app/data
        livenessProbe:
          exec:
            command:
            - curl
            - localhost:3001
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-service
spec:
  selector:
    app: uptime-kuma
  ports:
  - port: 3001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-ingress
spec:
  rules:
    - host: uptime-kuma.k3s.samoth.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  uptime-kuma-service
                port:
                  number: 3001
